<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <TextView
        android:id="@+id/expenseLb"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:text="@string/expense_default_label"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/typeLb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valueLb"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_value"
        android:textAlignment="viewStart"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/optionCardBtn"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:text="@string/coin_label"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/valueLb"
        app:layout_constraintStart_toEndOf="@+id/expenseLb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeLb"
        android:layout_width="10dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:background="@color/dynamic_type"
        android:textColor="@color/fixed_type"
        app:layout_constraintEnd_toStartOf="@+id/expenseLb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/optionCardBtn"
        android:layout_width="25dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/colorOnPrimary"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_32"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>